--- a/FlappyBird/FlappyBird.csproj
+++ b/FlappyBird/FlappyBird.csproj
@@ -41,7 +41,6 @@
     </Reference>
     <Reference Include="OpenTK">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\OpenTK.dll</HintPath>
-      <SpecificVersion>true</SpecificVersion>
     </Reference>
     <Reference Include="NVorbis">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\NVorbis.dll</HintPath>
@@ -56,6 +55,7 @@
     <Compile Include="ScoreManager.cs" />
     <Compile Include="Rock.cs" />
     <Compile Include="RockManager.cs" />
+    <Compile Include="GameScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
